--- a/src/css/blocks/publishers/export.less
+++ b/src/css/blocks/publishers/export.less
@@ -13,7 +13,10 @@
 		white-space: nowrap;
 	}
 	&__form-select-wrap {
-		padding-bottom: 20px;
+		margin-bottom: 40px;
+		.form__select-holder {
+			margin: 0;
+		}
 	}
 }
 
