--- a/src/templates/08_publishers-messages.twig
+++ b/src/templates/08_publishers-messages.twig
@@ -54,8 +54,8 @@
 
 						{#TABLE#}
 						<div class="publishers__table publishers__table_messages">
-							<div class="publishers__table-block publishers__table-block_messages">
-								<p class="publishers__table-block-no-messages">No one message is available</p>
+							<div class="publishers__table-body">
+								<p class="publishers__table-body-no-messages">No one message is available</p>
 							</div>
 						</div>
 						{#/TABLE#}
