--- a/src/templates/10_publishers-payments.twig
+++ b/src/templates/10_publishers-payments.twig
@@ -13,6 +13,8 @@
 		<div class="publishers__bg" style="background-image: url(img/publish_bg.jpg)">
 			<div class="publishers__bg-darken">
 				<div class="publishers__inner container-publishers">
+
+					{#BLOCk#}
 					<div class="publishers__block">
 						<h1 class="publishers__title">Payment Info</h1>
 
@@ -34,31 +36,35 @@
 						{#/PAYMENT INFO#}
 
 					</div>
+					{#/BLOCK#}
+
+					{#BLOCK#}
 					<div class="publishers__block">
 						<h2 class="publishers__title">List of Payment Periods</h2>
 
 						{#PAYMENTS TABLE#}
 						<div class="payments-list">
+
 							{#TABLE HEAD#}
-							<div class="payments-list__title">
-								<div class="payments-list__title-item payments-list__title-item_1">Start date</div>
-								<div class="payments-list__title-item payments-list__title-item_2">End date</div>
-								<div class="payments-list__title-item payments-list__title-item_3">Earned</div>
-								<div class="payments-list__title-item payments-list__title-item_4">
+							<div class="payments-list__header">
+								<div class="payments-list__header-item payments-list__header-item_1">Start date</div>
+								<div class="payments-list__header-item payments-list__header-item_2">End date</div>
+								<div class="payments-list__header-item payments-list__header-item_3">Earned</div>
+								<div class="payments-list__header-item payments-list__header-item_4">
 									Moved from previous periods
 								</div>
-								<div class="payments-list__title-item payments-list__title-item_5">
+								<div class="payments-list__header-item payments-list__header-item_5">
 									Total amount
 								</div>
-								<div class="payments-list__title-item payments-list__title-item_6">Payment date</div>
-								<div class="payments-list__title-item payments-list__title-item_7">Moved to
+								<div class="payments-list__header-item payments-list__header-item_6">Payment date</div>
+								<div class="payments-list__header-item payments-list__header-item_7">Moved to
 									next period
 								</div>
 							</div>
 							{#/TABLE HEAD#}
 
 							{#TABLE BODY#}
-							<div class="payments-list__block">
+							<div class="payments-list__body">
 								<div class="payments-list__inner">
 									<div class="payments-list__table-row">
 										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
@@ -143,18 +149,23 @@
 									</div>
 
 								</div>
+
 								{#SCROLLER#}
 								<div class="table-scroller">
 									<div class="table-scroller__itself"></div>
 									<div class="table-scroller__arrow"></div>
 								</div>
 								{#/SCROLLER#}
+
 							</div>
 							{#/TABLE BODY#}
+
 						</div>
 						{#/PAYMENTS TABLE#}
 
 					</div>
+					{#/BLOCK#}
+
 				</div>
 			</div>
 		</div>
