--- a/src/templates/12_publishers-export.twig
+++ b/src/templates/12_publishers-export.twig
@@ -30,46 +30,46 @@
 								{#OVERALL#}
 								<div class="form__export-block form__export-block_active js-export-block" id="export-block_1">
 									<div class="form__up-wrap">
-										<div class="form__block-checkbox">
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Place number</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Place title</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">URL or domain</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Where to track hits (domain, url, all)</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Zone number</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Place approved</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Impressions</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Clicks</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Ratio clicks/impressions</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Earned</span>
-										</div>
+										</label>
 									</div>
 
 									<div class="form__down-wrap">
@@ -82,34 +82,34 @@
 								<div class="form__export-block js-export-block" id="export-block_2">
 
 									<div class="form__up-wrap">
-										<div class="form__block-checkbox">
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Place number</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Zone number</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Year</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Month</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Day</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Impressions</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Clicks</span>
-										</div>
+										</label>
 									</div>
 
 									<div class="form__down-wrap">
@@ -152,34 +152,34 @@
 								<div class=" form__export-block js-export-block" id="export-block_3">
 
 									<div class="form__up-wrap">
-										<div class="form__block-checkbox">
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Place number</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Zone number</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Year</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Month</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Impressions</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Clicks</span>
-										</div>
-										<div class="form__block-checkbox">
+										</label>
+										<label class="form__block-checkbox">
 											<input type="checkbox" class="js-checkbox-small">
 											<span class="form__checkbox-text">Ratio clicks/impressions</span>
-										</div>
+										</label>
 									</div>
 
 									<div class="form__down-wrap">
