--- a/src/css/blocks/publishers/payments-list.less
+++ b/src/css/blocks/publishers/payments-list.less
@@ -1,12 +1,11 @@
 .payments-list  {
 
-
-	&__title{
-		color: #ffffff;
+	&__header {
+		color: white;
 		margin-bottom: 11px;
 		display: flex;
 	}
-	&__title-item {
+	&__header-item {
 		font-size: @14;
 		.medium();
 		line-height: 1.29;
@@ -34,7 +33,7 @@
 		}
 
 	}
-	&__block {
+	&__body {
 		border: 1px solid white;
 		padding: 18px 0 74px 0;
 		overflow: hidden;
@@ -42,8 +41,8 @@
 	}
 	&__inner {
 		max-height: 390px;
-		overflow: auto;
-		overflow-x: hidden;
+		overflow: hidden;
+		overflow-y: auto;
 		margin-right: -20px;
 	}
 	&__table-row {
@@ -54,7 +53,7 @@
 		text-align: center;
 		font-size: @14;
 		line-height: 1.29;
-		color: #ffffff;
+		color: white;
 		.light();
 		&_1 {
 			width: 14%;
@@ -84,18 +83,18 @@
 	.payments-list  {
 		display: flex;
 
-		&__title{
+		&__header{
 			flex-direction: column;
 			min-width: 113px;
 			width: 30%;
 			margin-bottom: 0;
 			padding-top: 6px;
 		}
-		&__title-item {
+		&__header-item {
 			.medium();
 			font-size: @12;
 			line-height: 1.29;
-			color: #ffffff;
+			color: white;
 			text-align: left;
 			height: 54px;
 			&_1 {
@@ -121,7 +120,7 @@
 			}
 
 		}
-		&__block {
+		&__body {
 			border: 1px solid white;
 			padding: 7px 6px 12px 6px;
 			overflow: hidden;
@@ -142,7 +141,7 @@
 			.light();
 			font-size: @12;
 			line-height: 1.29;
-			color: #ffffff;
+			color: white;
 			text-align: center;
 			height: 54px;
 			&_1 {
