--- a/src/css/blocks/publishers/places.less
+++ b/src/css/blocks/publishers/places.less
@@ -2,7 +2,7 @@
 
 	&__table {
 	}
-	&__table-title {
+	&__table-header {
 		padding-bottom: 32px;
 		display: flex;
 	}
@@ -10,47 +10,39 @@
 		.medium();
 		font-size: @14;
 		line-height: 1.29;
-		color: #ffffff;
+		color: white;
 		text-align: center;
 		&_1 {
 			width: 3%;
 			text-align: right;
 		}
 		&_2 {
-			//width: 130px
 			width: 11%;
 		}
 		&_3 {
-			//width: 183px;
 			width: 15%;
 		}
 		&_4 {
-			//width: 148px;
 			width: 13%;
 		}
 		&_5 {
-			//width: 139px;
 			width: 12%;
 		}
 		&_6 {
-			//width: 141px;
 			width: 12%;
 		}
 		&_7 {
-			//width: 143px;
 			width: 12%;
 		}
 		&_8 {
-			//width: 134px;
 			width: 11%;
 		}
 		&_9 {
-			//width: 103px;
 			width: 10%;
 		}
 
 	}
-	&__table-block {
+	&__table-body {
 		border: 1px solid white;
 		padding: 60px 0;
 		margin-bottom: 27px;
@@ -60,7 +52,7 @@
 		.medium();
 		font-size: @14;
 		line-height: 1.29;
-		color: #ffffff;
+		color: white;
 		text-align: center;
 		&_1 {
 			width: 3%;
@@ -106,7 +98,7 @@
 		&__table {
 			display: flex;
 		}
-		&__table-title {
+		&__table-header {
 			flex-direction: column;
 			min-width: 113px;
 			width: 30%;
@@ -117,7 +109,7 @@
 			.medium();
 			font-size: @12;
 			line-height: 1.29;
-			color: #ffffff;
+			color: white;
 			text-align: left;
 			height: 54px;
 			&_1 {
@@ -150,7 +142,7 @@
 			}
 
 		}
-		&__table-block {
+		&__table-body {
 			border: 1px solid white;
 			padding: 8px;
 			margin-bottom: 0;
@@ -161,7 +153,7 @@
 			.medium();
 			font-size: @12;
 			line-height: 1.29;
-			color: #ffffff;
+			color: white;
 			text-align: center;
 			height: 54px;
 			&_1 {
