--- a/src/css/form.less
+++ b/src/css/form.less
@@ -6,6 +6,9 @@
 		.form__input-holder {
 			margin-bottom: 0;
 		}
+		.form__select-holder {
+			margin-bottom: 0;
+		}
 	}
 
 	&__input-holder {
@@ -59,6 +62,7 @@
 		}
 		&_small {
 			height: 31px;
+			padding: 0 15px;
 		}
 	}
 
@@ -143,6 +147,7 @@
 		}
 		&_small {
 			height: 31px;
+			padding: 0 15px;
 		}
 	}
 	&__submit {
@@ -171,7 +176,7 @@
 	}
 	&__input-text {
 		display: inline-block;
-		padding-bottom: 4px;
+		margin-bottom: 4px;
 		font-size: @16;
 		color: #ffffff;
 		.light();
@@ -214,6 +219,9 @@
 		display: flex;
 		align-items: baseline;
 		margin-bottom: 16px;
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 	&__checkbox-text {
 		font-size: @16;
