--- a/src/templates/11_publishers-edit-account.twig
+++ b/src/templates/11_publishers-edit-account.twig
@@ -105,7 +105,7 @@
 								</div>
 								<div class="form__input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<span class="form__input-text" >Payment method</span>
+										<span class="form__input-text">Payment method</span>
 									</div>
 									<div class="form__select-holder">
 										<select class="form__select">
@@ -117,22 +117,21 @@
 									</div>
 								</div>
 								<div class="form__input-container js-form-input-container">
-									<div class="form__input-text-wrap">
-										<div class="form__input-text-wrap form__input-text-wrap_account">
-											<p class="form__input-text js-input-text">Minimum payment</p>
-											<p class="form__input-under-text">Minimum is $50</p>
-										</div>
-
+									<div class="form__input-text-wrap form__input-text-wrap_account">
+										<p class="form__input-text js-input-text">Minimum payment</p>
+										<p class="form__input-under-text">Minimum is $50</p>
 									</div>
+
 									<div class="form__input-wrap">
 										<div class="form__input-holder form__input-holder_mini">
 											<input type="text" class="form__input" placeholder="0">
 										</div>
-										<div class="form__block">
+										<label class="form__block">
 											<input type="checkbox" class="js-checkbox checkbox-styled">
 											<span class="form__checkbox-text">Hold next payment</span>
-										</div>
+										</label>
 									</div>
+
 								</div>
 								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
