--- a/src/templates/21_export-advertisers.twig
+++ b/src/templates/21_export-advertisers.twig
@@ -29,46 +29,46 @@
 							{#OVERALL#}
 							<div class="form__export-block form__export-block_active js-export-block" id="export-block_1">
 								<div class="form__up-wrap">
-									<div class="form__block-checkbox">
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Ad number</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Campaign number</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Zone number</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Campaign enabled</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Ad approved</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Impressions</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Clicks</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Ratio clicks/impressions</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Unused impressions</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Unused clicks</span>
-									</div>
+									</label>
 								</div>
 
 								<div class="form__down-wrap">
@@ -81,34 +81,34 @@
 							<div class="form__export-block js-export-block" id="export-block_2">
 
 								<div class="form__up-wrap">
-									<div class="form__block-checkbox">
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Ad number</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Campaign number</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Year</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Month</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Day</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Impressions</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Clicks</span>
-									</div>
+									</label>
 								</div>
 
 								<div class="form__down-wrap">
@@ -150,34 +150,34 @@
 							<div class=" form__export-block js-export-block" id="export-block_3">
 
 								<div class="form__up-wrap">
-									<div class="form__block-checkbox">
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Ad number</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Campaign number</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Year</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Month</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Impressions</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Clicks</span>
-									</div>
-									<div class="form__block-checkbox">
+									</label>
+									<label class="form__block-checkbox">
 										<input type="checkbox" class="js-checkbox-small">
 										<span class="form__checkbox-text">Ratio clicks/impressions</span>
-									</div>
+									</label>
 								</div>
 
 								<div class="form__down-wrap">
