--- a/src/css/blocks/guest/guest-form.less
+++ b/src/css/blocks/guest/guest-form.less
@@ -12,9 +12,9 @@
 	&__line {
 		margin-bottom: 20px;
 		display: flex;
-		&:last-child {
-			margin-bottom: 0;
-		}
+		//&:last-child {
+		//	margin-bottom: 0;
+		//}
 		&_checkbox {
 			margin-bottom: 26px;
 			justify-content: flex-end;
