--- a/src/templates/06_guest-registration.twig
+++ b/src/templates/06_guest-registration.twig
@@ -125,13 +125,13 @@
 							</div>
 						</div>
 						<div class="guest-form__line guest-form__line_checkbox">
-							<div class="guest-form__checkbox-holder">
+							<label class="guest-form__checkbox-holder">
 								<input type="checkbox" class="checkbox-styled js-checkbox">
-								<div class="guest-form__checkbox-text">
+								<span class="guest-form__checkbox-text">
 									I have read and agree to
 									<a href="#" class="guest-form__checkbox-link">Rules</a>
-								</div>
-							</div>
+								</span>
+							</label>
 						</div>
 						<div class="guest-form__line guest-form__line_submit">
 							<div class="guest-form__submit-holder">
