--- a/src/css/blocks/header.less
+++ b/src/css/blocks/header.less
@@ -227,8 +227,7 @@
 				background: black;
 			}
 			&:nth-child(2) {
-				opacity: 1;
-				visibility: hidden;
+				display: none;
 			}
 			&:last-child {
 				transform: rotate(45deg);
@@ -363,11 +362,6 @@
 			&_response {
 				display: none !important;
 			}
-		}
-		&__nav-item-dropdown {
-			position: static;
-			padding-right: 18px;
-			padding-top: 15px;
 		}
 		&__right-part {
 			display: none;
