Fix option (select) font-size

--- a/src/css/form.less
+++ b/src/css/form.less
@@ -140,9 +140,9 @@
 		font-size: @16;
 		.regular();
 
-		option{
+		option {
 			background: #1F242D;
-			font-size: @16;
+			font-size: inherit;
 			padding: 0 22px;
 		}
 		&_small {
