--- a/src/templates/parts/header-advertisers.twig
+++ b/src/templates/parts/header-advertisers.twig
@@ -25,14 +25,22 @@
 				</div>
 
 
-				<div class="header__nav-item header__nav-item_login header__nav-item_dropdown js-header-nav-item-trigger">
-					<a href="#" class="header__nav-item-text">Kalista</a>
-					<i class="header__nav-item-icon"></i>
+				<div class="header__nav-item header__nav-item_dropdown js-header-nav-item-parent">
+					{#MOBILE DROPDOWN TRIGGER#}
+					<div class="header__nav-item-container js-header-nav-item-trigger">
+						<a href="#" class="header__nav-item-text header__nav-item-text_login">Kalista</a>
+						<i class="header__nav-item-icon"></i>
+					</div>
+					{#/MOBILE DROPDOWN TRIGGER#}
+
+					{#MOBILE DROPDOWN#}
 					<div class="header__nav-item-dropdown js-header-nav-item-dropdown">
 						<a href="#" class="header__nav-item-dropdown-link">Edit Account</a>
 						<a href="#" class="header__nav-item-dropdown-link">Log Off</a>
 					</div>
+					{#/MOBILE DROPDOWN#}
 				</div>
+
 				<a href="#" class="header__nav-item">Home</a>
 				<a href="#" class="header__nav-item">Ads</a>
 				<a href="#" class="header__nav-item">Campaigns</a>
@@ -52,18 +60,28 @@
 					</div>
 					{#/DROPDOWN#}
 				</div>
-				<div class="header__nav-item header__nav-item_dropdown js-header-nav-item-trigger">
-					<a href="#" class="header__nav-item-text">Orders</a>
-					<i class="header__nav-item-icon"></i>
+				<div class="header__nav-item header__nav-item_dropdown js-header-nav-item-parent">
+					{#MOBILE DROPDOWN TRIGGER#}
+					<div class="header__nav-item-container js-header-nav-item-trigger">
+						<a href="#" class="header__nav-item-text">Orders</a>
+						<i class="header__nav-item-icon"></i>
+					</div>
+					{#/MOBILE DROPDOWN TRIGGER#}
+
+					{#MOBILE DROPDOWN#}
 					<div class="header__nav-item-dropdown js-header-nav-item-dropdown">
 						<a href="#" class="header__nav-item-dropdown-link">Existing Orders</a>
 						<a href="#" class="header__nav-item-dropdown-link">New Order</a>
 					</div>
+					{#/MOBILE DROPDOWN#}
 				</div>
+
+				{#NEW AD LINK#}
 				<a href="#" class="header__add-new header__add-new_response">
 					<i class="header__add-new-icon"></i>
 					<span class="header__add-new-text">New Ad</span>
 				</a>
+				{#/NEW AD LINK#}
 			</nav>
 			{#/NAV#}
 		</div>
