Fixed conflicts in header

--- a/src/css/blocks/advertisers/adv-table.less
+++ b/src/css/blocks/advertisers/adv-table.less
@@ -152,16 +152,10 @@
 			margin-right: 0;
 		}
 		&_graphic {
-			background: url(../img/icon-graphic.png) no-repeat 0 0;
-			background-size: contain;
-			width: 19px;
-			height: 17px;
+			.svg-icon(icon-graphic, 19px, 17px);
 		}
 		&_edit {
-			background: url(../img/icon-edit.png) no-repeat 0 0;
-			background-size: contain;
-			width: 19px;
-			height: 19px;
+			.svg-icon(icon-graphic, 19px, 19px);
 		}
 	}
 
@@ -359,12 +353,10 @@
 		&__icon {
 			margin-right: 10px;
 			&_graphic {
-				width: 14px;
-				height: 12px;
+				.svg-icon(icon-graphic, 14px, 12px);
 			}
 			&_edit {
-				width: 14px;
-				height: 14px;
+				.svg-icon(icon-graphic, 14px, 14px);
 			}
 		}
 
