--- a/src/css/blocks/advertisers/adv-table.less
+++ b/src/css/blocks/advertisers/adv-table.less
@@ -356,7 +356,7 @@
 				.svg-icon(icon-graphic, 14px, 12px);
 			}
 			&_edit {
-				.svg-icon(icon-graphic, 14px, 14px);
+				.svg-icon(icon-edit, 14px, 14px);
 			}
 		}
 
