--- a/src/templates/parts/header-advertisers.twig
+++ b/src/templates/parts/header-advertisers.twig
@@ -1,5 +1,5 @@
 {#HEADER#}
-<div class="header header_grey">
+<div class="header header_grey" id="header">
 	<div class="header__container container">
 
 		{#BURGER#}
