--- a/src/templates/06_guest-registration.twig
+++ b/src/templates/06_guest-registration.twig
@@ -6,7 +6,7 @@
 
 {% block header %}
 	{#HEADER#}
-	<div class="header header_grey">
+	<div class="header header_grey" id="header">
 		<div class="header__container container">
 
 
