--- a/src/css/blocks/advertisers/std-adv.less
+++ b/src/css/blocks/advertisers/std-adv.less
@@ -1,5 +1,6 @@
 .std-adv {
-	padding: 40px 0;
+	padding-top: 40px + 99px;
+	padding-bottom: 40px;
 	flex-grow: 20;
 
 	background-position: center center;
