--- a/src/css/blocks/guest/contact-us.less
+++ b/src/css/blocks/guest/contact-us.less
@@ -1,5 +1,5 @@
 .contact-us {
-	padding-top: 40px;
+	padding-top: 40px + 99px;
 	padding-bottom: 85px;
 	flex-grow: 20;
 
@@ -42,7 +42,7 @@
 
 @media screen and (max-width: 768px) {
 	.contact-us {
-		padding-top: 22px;
+		padding-top: 22px + 43px;
 		padding-bottom: 34px;
 
 		&__title {
