--- a/src/css/blocks/guest/guest-login.less
+++ b/src/css/blocks/guest/guest-login.less
@@ -1,5 +1,5 @@
 .guest-login {
-	padding-top: 75px;
+	padding-top: 75px + 99px;
 	padding-bottom: 75px;
 	flex-grow: 20;
 
@@ -91,7 +91,7 @@
 
 @media screen and (max-width: 768px) {
 	.guest-login {
-		padding-top: 22px;
+		padding-top: 22px + 43px;
 		padding-bottom: 35px;
 
 		&__content {
