--- a/src/css/blocks/guest/guest-reg.less
+++ b/src/css/blocks/guest/guest-reg.less
@@ -1,5 +1,5 @@
 .guest-reg {
-	padding-top: 39px;
+	padding-top: 39px + 99px;
 	padding-bottom: 39px;
 
 	background-position: center center;
@@ -61,6 +61,7 @@
 
 @media screen and (max-width: 768px) {
 	.guest-reg {
+		padding-top: 39px + 43px;
 		&__content {
 
 			.guest-form__input-holder {
