--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -20,7 +20,7 @@
 		flex-direction: column;
 	}
 	&__inner {
-		padding-top: 40px;
+		padding-top: 40px + 99px;
 		padding-bottom: 40px;
 	}
 
@@ -120,7 +120,7 @@
 
 @media screen and (max-width: 768px) {
 	.publishers {
-		padding-top: 43px;
+
 		&__table {
 			padding-bottom: 0;
 			display: flex;
@@ -171,7 +171,7 @@
 			margin-bottom: 20px;
 		}
 		&__inner {
-			padding-top: 20px;
+			padding-top: 20px + 43px;
 			padding-bottom: 20px;
 		}
 		&__table-body-inner {
